--- a/DOM Manipulation/index.html
+++ b/DOM Manipulation/index.html
@@ -7,17 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Introduction</title>
     <style>
-        h1{
-            color:red;
+        h1 {
+            color: red;
         }
-        .firstDiv{
+
+        .firstDiv {
             background-color: aqua;
         }
-        .secondDiv{
+
+        .secondDiv {
             background-color: cornflowerblue;
         }
-        h2{
-            color:blue;
+
+        h2 {
+            color: blue;
         }
     </style>
 </head>
@@ -45,6 +48,13 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ab modi omnis culpa? Aliquid, dolorum sunt
             voluptates necessitatibus laborum vel.</p>
         <span id="secondSpan">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, impedit.</span>
+    </div>
+    <div class="thirdDiv">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ab modi omnis culpa? Aliquid, dolorum sunt
+            voluptates necessitatibus laborum vel.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ab modi omnis culpa? Aliquid, dolorum sunt
+            voluptates necessitatibus laborum vel.</p>
+        <span id="thirdSpan">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, impedit.</span>
     </div>
     <script src="WalkingDOM.js"></script>
 </body>
