--- a/Different Insertion Methods/index.html
+++ b/Different Insertion Methods/index.html
@@ -7,6 +7,12 @@
     <title>Insertion Methods</title>
 </head>
 <body>
+    <div id = "parent">
+        <p>
+            This is an Existing Child.
+        </p>
+
+    </div>
     <div class="header1">
         <span>This is a first span element.</span>
         <p id = "para1">This is a first paragraph tag.</p>
@@ -16,5 +22,6 @@
         <p id = "para2">This is a second paragraph tag.</p>
     </div>
     <script src="script.js"></script>
+    <script src="newscript.js"></script>
 </body>
 </html>
